# Audio_DiagramTools

./: .clang-format  .editorconfig  .gitattributes  .gitignore  ARTICLE_INDEX.html  CMakeLists.txt  CMakePresets.json  OPEN_ARTICLE_PREVIEW.cmd  OPEN_CURRENT_BLOG_POST.html  README.md  index.html  preview.html  preview.ps1
articles/: README.md  index.json
articles/hise-audio-file-to-speaker-demo/: article.json  article.md
articles/hise-audio-file-to-speaker-demo/assets/: README.md
articles/hise-audio-file-to-speaker-demo/renders/: README.md
articles/hise-dsp-buffer/: article.json  article.md
articles/hise-dsp-buffer/assets/: README.md
articles/hise-dsp-buffer/renders/: README.md
docs/: dependency-policy.md  hise-dsp-buffer-article-blueprint.md  hise-dsp-buffer-article-research.md  pipeline.md  project-structure.md  visual-system.md
docs/style-reference/: README.md
examples/: adt_block_processing_experiment.cpp  adt_create_article_project.cpp  adt_eight_sample_waveform.cpp  adt_encode_gif.cpp  adt_render.cpp  adt_render_composite_graphic.cpp  adt_render_graphic.cpp  adt_style_lab.cpp
preview_lab/: README.md  hise-published-topic.css  hise-published-topic.html  hise-published-topic.js
scripts/: Build.ps1  EncodeGif.ps1  NewArticleProject.ps1  RenderEightSampleWaveform.ps1  RenderExample.ps1  RenderStyleLab.ps1  build_static_preview.js  render_hise_gain_node_code.py  render_hise_gain_node_cpp_code.py  serve_preview_lab.py
src/audio_diagram_tools/: article_project.cpp  article_project.h  audio_file_motion.cpp  audio_file_motion.h  block_processing_experiment.cpp  block_processing_experiment.h  canonical_array_graphic.cpp  canonical_audio_file_player_graphic.cpp  canonical_audio_file_to_speaker_scene.cpp  canonical_components.cpp  canonical_components.h  canonical_dense_sample_waveform_graphic.cpp  canonical_double_arrow_graphic.cpp  canonical_drawing.cpp  canonical_drawing.h  canonical_graphics.cpp  canonical_hise_node_container.cpp  canonical_oscillator_block_factory_graphic.cpp  canonical_output_stream_to_speaker_graphic.cpp  canonical_plugin_chain_routing_graphic.cpp  canonical_renderers.h  canonical_sample_table_playback_scene.cpp  canonical_sample_table_waveform_graphic.cpp  canonical_sample_values_plot.cpp  canonical_speaker_animation_graphic.cpp  canonical_waveform_buffer_split_graphic.cpp  canonical_waveform_volume_scale_graphic.cpp  composite_graphics.cpp  composite_graphics.h  composition.cpp  composition.h  gif_exporter.cpp  gif_exporter.h  png_export.cpp  png_export.h  render_types.cpp  render_types.h  sampled_waveform_scene.cpp  sampled_waveform_scene.h  style_lab_scene.cpp  (+3 more)
tests/: smoke_audio_file_motion.cpp  smoke_canonical.cpp  smoke_composition.cpp  smoke_gif.cpp  smoke_render.cpp
